@@ -916,40 +916,52 @@ AT_KEYWORDS([extensions runsubscripts subscripts])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
+       PROGRAM-ID. prog.
        DATA             DIVISION.
        WORKING-STORAGE  SECTION.
-       01  n            PIC 9(03)  VALUE 123.
-       01  p            USAGE POINTER.
+       01  N            PIC 9(03)  VALUE 123 COMP-5.
+       01  P            USAGE POINTER.
+       01  SAV          PIC X(8192).
+       01  W-TABLE.
+           03  WROWS     OCCURS 0 TO 500 TIMES
+                        DEPENDING ON N.
+               05 WCOL1  PIC 9.
+               05 WCOL2  PIC X(02).
 
        LINKAGE SECTION.
-       01  a-table.
-           03  rows     OCCURS 0 TO UNBOUNDED TIMES
-                        DEPENDING ON n.
-               05 col1  PIC X.
-               05 col2  PIC X(02).
+       01  A-TABLE.
+           03  ROWS     OCCURS 0 TO UNBOUNDED TIMES
+                        DEPENDING ON N.
+               05 COL1  PIC X.
+               05 COL2  PIC X(02).
 
        PROCEDURE DIVISION.
-           IF FUNCTION LENGTH (a-table) NOT = 369
-              DISPLAY 'WRONG LENGTH: ' FUNCTION LENGTH (a-table)
+           IF FUNCTION LENGTH (W-TABLE) NOT = 369
+              DISPLAY 'WRONG WS LENGTH: ' FUNCTION LENGTH (A-TABLE)
               END-DISPLAY
            END-IF
-           ALLOCATE FUNCTION LENGTH (a-table) CHARACTERS
+           IF FUNCTION LENGTH (A-TABLE) NOT = 369
+              DISPLAY 'WRONG LS LENGTH: ' FUNCTION LENGTH (A-TABLE)
+              END-DISPLAY
+           END-IF
+           ALLOCATE FUNCTION LENGTH (A-TABLE) CHARACTERS
                     INITIALIZED TO ALL "ABCDE"
-                    RETURNING p
-           SET ADDRESS OF a-table TO p
-           IF col2(1) NOT = "BC"
+                    RETURNING P
+           SET ADDRESS OF A-TABLE TO P
+           IF COL2(1) NOT = "BC"
               DISPLAY "col2(1) wrong: " col2(1)
-              END-DISPLAY
            END-IF
-           IF rows(2) NOT = "DEA"
+           IF ROWS(2) NOT = "DEA"
               DISPLAY "rows(2) wrong: " rows(2)
-              END-DISPLAY
            END-IF
-           .
+           MOVE A-TABLE TO SAV.
+           INITIALIZE A-TABLE.
+           INITIALIZE W-TABLE.
+           STOP RUN.
 ])
 
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBC -x -std=ibm -w -fodoslide prog.cob ], [0], [], [])
+
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 
 AT_CLEANUP
