@@ -1,4 +1,9 @@
 
+2020-08-28  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: Changes for UNBOUNDED OCCURS
+	* typeck.c: Changes for UNBOUNDED OCCURS
+
 2020-07-26  Edward Hart <edward.dan.hart@gmail.com>
 
 	* config.def: added possible values for assign-clause and
